<resources>
    <string name="app_name">GPSSMSR</string>
    <string name="servicems">ServiceMS</string>
    <string name="localizacion" formatted="true">%1$d : %2$d : %3$d ; %4$d</string>
    <string name="Reposo">Hola! Obten ubicacion por medio del boton</string>
    <string name="gps">GPS</string>
    <string name="tiempo2">Tiempo</string>
    <string name="tiempo">timestamp</string>
    <string name="Altitud">Altitud</string>
    <string name="Longitud">Longitud</string>
    <string name="Latitud">Latitud</string>
    <string name="Send">Send</string>
    <string name="IP">IP</string>
    <string name="Port">Port</string>
    <string name="adres">191.109.1.157</string>
    <string name="port">52022</string>
    <string name="UDP">UDP</string>
    <string name="TCP">TCP</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="_186_170_103_252">186.170.103.252</string>
    <string name="_51060">51050</string>
    <string name="puerto">Puerto</string>
    <string name="_191_109_14_205">191.109.14.205</string>
    <string name="_52022">52022</string>
    <string name="puerto1">Puerto</string>
    <string name="_201_185_177_60">201.185.177.60</string>
    <string name="_52000">52000</string>
    <string name="puerto2">Puerto</string>
    <string name="puerto3">Puerto</string>
    <string name="ip_4">IP 4</string>
    <string name="ip_1">IP 1</string>
    <string name="ip_2">IP 2</string>
    <string name="ip_3">IP 3</string>
    <string name="_191_109_3_12">191.109.3.12</string>
    <string name="_51000">51000</string>
</resources>